language dropdown + small changes
changed some of the callback routines to promises, added language dropdown

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 					<div class="header_title_wrapper">
 						<div class="map_title" id="map_title"></div>
 					</div>
-					
+					<div id="header_lang_block">
+						<select id="language_input"></select>
+					</div>
 					<div id="global_info_btn">?</div>
 				</div>
 
@@ -348,5 +350,5 @@
 		</div>
 	</body>
 	<!-- change to ./dist/bundle.js -->
-	<script type="module" src="./dist/bundle.js"></script>
+	<script type="module" src="bundle.js"></script>
 </html>
