--- a/index.html
+++ b/index.html
@@ -328,6 +328,8 @@
 							</div>
 							<!-- chart itself -->
 							<div id="chart_line"></div>
+							<!-- chart description -->
+							<div id="chart_description"></div>
 						</div>
 					</div>
 					<div id="right-column" class="dashboard-column">
