added screenshot button

--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
 					<div id="center-column" class="dashboard-column">
 						<!-- map block -->
 						<div class="map_wrapper dash_block">
-							<!-- map spinner loader whatever  -->
-							<div id="map_spinner"></div>
-
+							<!-- map spinner loader -->
+							<div id="map_spinner">
+								<div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+							</div>
+							
 							<!-- map modal with info -->
 							<div id="map_info_wrapper">
 								<div id="map_info_modal">
